2015-12-11  Nathan Sidwell  <nathan@acm.org>

	* gcc.dg/pr59605-1.c: Reduce iterations for nvptx.

2015-12-11  Jan Beulich  <jbeulich@suse.com>

	* gcc.c-torture/execute/stkalign.c: New.

2015-12-11  Tsvetkova Alexandra  <aleksandra.tsvetkova@intel.com>

	* gcc.target/i386/mpx/memmove-1.c: New test.
	* gcc.target/i386/mpx/memmove-2.c: New test.

2015-12-11  Nathan Sidwell  <nathan@acm.org>

	* gcc.target/nvptx/ary-init.c: Repair dg_final syntax.
	* gcc.target/nvptx/decl-init.c: Likewise.  Add TI case.

2015-12-11  Martin Jambor  <mjambor@suse.cz>

	PR ipa/68064
	* g++.dg/torture/pr68064.C: New test.

2015-12-11  Dominik Vogt  <vogt@linux.vnet.ibm.com>

	* gcc.target/s390/md/setmem_long-1.c: New test.

2015-12-11  Dominik Vogt  <vogt@linux.vnet.ibm.com>

	* gcc.target/s390/md/movstr-1.c: New test.
	* gcc.target/s390/s390.exp: Add subdir md.
	Do not run hotpatch tests twice.

2015-12-11  Ilya Enkovich  <enkovich.gnu@gmail.com>

	* gcc.dg/vect/vect-32-chars.c: New test.

2015-12-11  Jan Hubicka  <hubicka@ucw.cz>

	PR ipa/61886
	* gcc.dg/lto/pr61886_0.c: New testcase

2015-12-10  Jan Hubicka  <hubicka@ucw.cz>

	* gcc.c-torture/execute/20010122-1.c: Disable cloning.

2015-12-10  Vladimir Makarov  <vmakarov@redhat.com>

	PR rtl-optimization/68691
	* gcc.target/i386/pr68691.c: New.

2015-12-10  David Malcolm  <dmalcolm@redhat.com>

	* lib/multiline.exp (_multiline_expected_outputs): Update comment.
	(dg-end-multiline-output): Capture line numbers within
	_multiline_expected_outputs.
	(handle-multiline-outputs): Access global $testname_with_flags
	and add it as a prefix to pass/fail results.  Extract line numbers
	from $_multiline_expected_outputs and print them within pass/fail
	results, replacing the printing of $index.  Consolidate the
	string prefix shared between pass/fail into a new local ($title).

2015-12-10  Jeff Law  <law@redhat.com>

	PR tree-optimization/68619
	* gcc.dg/tree-ssa/pr68619-1.c: New test.
	* gcc.dg/tree-ssa/pr68619-2.c: New test.