@@ -74,6 +74,10 @@ bitmap_ior_and_compl (bitmap dst, const_bitmap a, const_bitmap b,
    2x "kill_elt->indx >= b_elt->indx" in the first "while" loop
       -> "kill_elt->indx == b_elt->indx" in the second condition,
 	 skipping the known-true "b_elt && kill_elt" in the second
-	 condition.  */
-/* { dg-final { scan-tree-dump-times "Threaded" 4 "dom2" { target logical_op_short_circuit } } } */
+	 condition.
+
+   However, 3 of those 4 opportunities are ultimately eliminated by
+   DOM optimizing away conditionals.  So there's only one jump threading
+   opportunity left.  */
+/* { dg-final { scan-tree-dump-times "Threaded" 1 "dom2" { target logical_op_short_circuit } } } */
 
