@@ -1,3 +1,8 @@
+2015-12-11  Jeff Law  <law@redhat.com>
+
+	PR tree-optimization/68844
+	* gcc.dg/tree-ssa/ssa-dom-thread-4.c: Update expected output.
+
 2015-12-11  Nathan Sidwell  <nathan@acm.org>
 
 	* gcc.dg/pr59605-1.c: Reduce iterations for nvptx.
